--- a/amplify.yml
+++ b/amplify.yml
@@ -2,12 +2,17 @@ version: 1
 frontend:
   phases:
     # IMPORTANT - Please verify your build commands
+    preBuild:
+      commands:
+        - yarn install
     build:
-      commands: []
+      commands:
+        - yarn run build
   artifacts:
     # IMPORTANT - Please verify your build output directory
-    baseDirectory: /
+    baseDirectory: reactapp/build
     files:
       - '**/*'
   cache:
-    paths: []
+    paths:
+    - node_modules/**/*
