--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/reactapp/node_modules
-/reactapp/.pnp
+/node_modules
+/.pnp
 .pnp.js
 
 # testing
-/reactapp/coverage
+/coverage
 
 # production
-/reactapp/build
+/build
 
 # misc
 .DS_Store
